2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* src/Album.cs:

	Sort by artist, instead of album name.

2004-01-18  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/glade/AddWindow.glade:
	* data/glade/PlaylistWindow.glade:
	* libmuine/pointer-list-view.c: (pointer_list_view_add_column):
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/LibraryWindow.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	* src/Song.cs:

	Implement "Add album" window, fix window size saving.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/AddWindow.glade:
	* libmuine/pointer-list-view.c: (scroll_to_path),
	(pointer_list_view_select_next), (pointer_list_view_select_prev):
	* src/AddSongWindow.cs:
	* src/PlaylistWindow.cs:

	Remove obsolete queue button, scroll when needed.

2004-01-18  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/AddWindow.glade:
	* libmuine/pointer-list-view.c: (pointer_list_view_init),
	(pointer_foreach_func), (path_foreach_func),
	(pointer_list_view_get_selection),
	(pointer_list_view_set_keep_selection),
	(pointer_list_view_select_first), (pointer_list_view_select_next),
	(pointer_list_view_select_prev):
	* libmuine/pointer-list-view.h:
	* src/AddSongWindow.cs:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:

	Finish "Add song" window.

2004-01-17  Jorn Baayen  <jorn@nl.linux.org>

	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/PlaylistWindow.cs:
	* src/Song.cs:

	Optimizations.

2004-01-17  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/AddWindow.glade:
	* data/glade/ErrorDialog.glade:
	* data/glade/Makefile.am:
	* data/glade/PlaylistWindow.glade:
	* data/glade/ProgressWindow.glade:
	* data/glade/SkipToWindow.glade:
	* data/muine.schemas.in:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/ErrorDialog.cs:
	* src/KeyUtils.cs:
	* src/Makefile.am:
	* src/MarkupUtils.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs: